# timetable/views/user/schemas/login_form.py
@@ -1,0 +1,9 @@
+from marshmallow import Schema, fields
+
+
+class LoginFormSchema(Schema):
+    username = fields.Str(required=True)
+    password = fields.Str(required=True)
+
+
+login_form_schema = LoginFormSchema()
